tests/custom/deep_broken.p
program Main;
class Main begin
    function Main;
        var a : boolean;
    begin
        b := true;
        if b then
            if b then
                if b then
                    b := false;
        b := false;
        while b do
            while b do
                while b do
                    b := false;
        begin
            begin
                begin
                    begin
                        b := true;
                    end
                end
            end
        end;

        if b then begin
            if b then begin
                b := false
            end else begin
                b := true
            end
        end else begin
            if b then begin
                b := false
            end else begin
                b := true
            end
        end;
    end
end
.
